--- a/src/app/detections/detection-details/detection-details.page.html
+++ b/src/app/detections/detection-details/detection-details.page.html
@@ -47,7 +47,7 @@
         <ion-button expand="block" fill='outline' color="danger" routerLink="/tabs/detections/newstrike/{{ loadedDetection?.id }}">Strike</ion-button>
       </ion-col>
 
-      <ion-col size-md="3" offset-md="3" class="ion-padding ion-text-center">
+      <ion-col size-md="3" class="ion-padding ion-text-center">
         <ion-button expand="block" color="danger" (click)="onDelete(loadedDetection?.id)">Delete</ion-button>
       </ion-col>
     </ion-row>
