--- a/src/app/detections/detections.page.html
+++ b/src/app/detections/detections.page.html
@@ -7,19 +7,25 @@
 </ion-header>
 
 <ion-content class="ion-padding">
+  <ion-grid>
+    <ion-row>
+      <ion-col size-md="6" offset-md="3">
+        <ion-item-group *ngFor="let dateGroup of loadedDetections" >
+          <ion-item-divider >
+              {{ dateGroup.date | date }}
+          </ion-item-divider>
+          <ion-grid>
+            <ion-row>
+              <ion-col size='6' *ngFor="let detection of dateGroup.detections" class="ion-no-padding">
+                <ion-item class="ion-no-padding" lines="none" routerLink="/tabs/detections/{{ detection.id }}">
+                  <ion-img [src]='detection.frameUrl'></ion-img>
+                </ion-item>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-item-group>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
-  <ion-item-group *ngFor="let dateGroup of loadedDetections" >
-    <ion-item-divider >
-        {{ dateGroup.date | date }}
-    </ion-item-divider>
-    <ion-grid>
-      <ion-row>
-        <ion-col size='6' *ngFor="let detection of dateGroup.detections" class="ion-no-padding">
-          <ion-item class="ion-no-padding" lines="none" routerLink="/tabs/detections/{{ detection.id }}">
-            <ion-img [src]='detection.frameUrl'></ion-img>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </ion-item-group>
 </ion-content>
