--- a/src/app/reports/reports.page.html
+++ b/src/app/reports/reports.page.html
@@ -5,5 +5,27 @@
 </ion-header>
 
 <ion-content>
+  <!-- <ion-col class="ion-padding ion-text-center">
+    <ion-button expand="block" color="success" (click)="createReport()">Create Report</ion-button>
+  </ion-col> -->
 
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button (click)="createReport()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
+  <ion-grid *ngIf="!isLoading">
+    <ion-row *ngFor="let report of loadedReports">
+      <ion-col>
+        <ion-card >
+          <ion-item routerLink="/tabs/reports/{{ report.id }}">
+            <ion-label>
+              <b>{{ report.date.seconds*1000 | date:'MMMM y' }}</b>
+            </ion-label>
+          </ion-item>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
